package interfaces.base;

public interface Viewable {
    String getDetailedInfo();
}
