package models.enums;

public enum FileType {
    DOCUMENT,
    IMAGE,
    MULTIMEDIA,
    VIDEO
}
